--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <meta name="theme-color" content="transparent"/>
-    <title>Simple Blog</title>
+    <title>Echo Chat</title>
 </head>
 <body>
 <div id="root"></div>
